Archive2/6a/605247a764bd45/output
main.cpp: In function 'int main()':
main.cpp:4:10: error: expected unqualified-id before 'for'
 explicit for (std::size_t a=0;a<100000;a++);
          ^
main.cpp:4:31: error: 'a' was not declared in this scope
 explicit for (std::size_t a=0;a<100000;a++);
                               ^
