Archive2/6a/605247a764bd45/main.cpp
#include<cstddef>

int main(){
explicit for (std::size_t a=0;a<100000;a++);
}